# Sentry

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  env.example  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  state.rs
src-tauri/src/backup/: engine.rs  manifest.rs  mod.rs  scheduler.rs  set.rs
src-tauri/src/cloud/: google_drive.rs  mod.rs
src-tauri/src/weather/: alerts.rs  mod.rs
src/components/backups/: BackupSets.tsx
src/components/cloud/: CloudStorage.tsx
src/components/dashboard/: Dashboard.tsx
src/components/downloads/: DownloadDock.tsx
src/components/layout/: Layout.tsx  Titlebar.tsx
src/components/onboarding/: Onboarding.tsx
src/components/schedule/: Schedule.tsx
src/components/settings/: Settings.tsx
src/components/ui/: TitleBar.tsx  progress.tsx
src/lib/: backupRunner.ts  downloads-store.ts  store.ts  tauri.ts  utils.ts
src/styles/: globals.css
website/: index.html
