[package]
name = "sentry"
version = "1.0.1"
description = "Sentry - Intelligent Backup Management System"
authors = ["you"]
edition = "2021"

[lib]
name = "sentry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
walkdir = "2"
zip = "2"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "5"
notify = "8"
rfd = "0.15"
urlencoding = "2"
dotenvy = "0.15"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
bytes = "1"

